[package]
name = "horn"
version = "0.1.0"
authors = ["andrei-papou <popow.andrej2009@yandex.ru>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
failure = "0.1.5"
failure_derive = "0.1.5"
ndarray = "0.12.1"
num-traits = "0.2.8"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.1"
