[package]
name = "horn"
version = "0.1.0"
authors = ["andrei-papou <popow.andrej2009@yandex.ru>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
containers = "0.9.5"
failure = "0.1.5"
failure_derive = "0.1.5"
blas-src = { version = "*", features = ["openblas"] }
openblas-src = { version = "0.6.1", features = ["cblas"] }
ndarray = { version = "0.12.1", features = ["blas"] }
num-traits = "0.2.8"
rayon = "1.2.0"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.1"

[profile.release]
lto = true
