[package]
name = "rust_cli"
version = "0.1.0"
authors = ["andrei-papou <popow.andrej2009@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
failure_derive = "0.1.5"
ndarray = "0.12.1"
horn = { path = "../../rust" }
